--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
 <body>
 
 <h1>Trail Map</h1>
-<img src="map.jpg" alt="Trail Map">
+<img src="map.png" alt="Trail Map">
+
+<h1>Trail Map Data Sheat</h1>
+<a href="https://docs.google.com/spreadsheets/d/10dq2pvtCEpNw44iPqqYLTyvLettJ1lK8GsQsgio02e4/edit?usp=sharing">Click Here for The Sheat</a>
