--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <h1>Trail Map Data Sheat</h1>
 <a href="https://docs.google.com/spreadsheets/d/10dq2pvtCEpNw44iPqqYLTyvLettJ1lK8GsQsgio02e4/edit?usp=sharing" target="_blank">Click Here for The Sheat </a>
 
-<h1>Our Biomes</h1>
+<h1>Our Biome</h1>
 <img src="biome.png" alt="biome">
