--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+  body {
+  background-color: lightblue;
+}
+  p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
 
 <h1>Trail Map</h1>
 <img src="map.png" alt="Trail Map">
@@ -10,3 +18,5 @@
 
 <h1>Our Biome</h1>
 <img src="biome.png" alt="biome">
+  
+  
