--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
 
@@ -13,3 +16,5 @@
 <img src="biome.png" alt="biome">
   
   
+</body>
+</html>
