--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 <font style="font-family:times;font-size:64px;">
 </font>
-&nbsp;&nbsp;<A HREF="map.html"style="text-decoration:none;"><font color=#1C7FFF>M</font><font color=#2824B1>ap</font><font color="WHITE">s</font></A></br>
+&nbsp;&nbsp;<A HREF="map.png"style="text-decoration:none;"><font color=#1C7FFF>M</font><font color=#2824B1>ap</font><font color="WHITE">s</font></A></br>
 &nbsp;&nbsp;
-<A HREF="data.html"text-decoration:none;"><font color=#FF171A>Da</font><font color=#FF5C00>ta</font><font color=#00FF00>-</font><font color=#C1C1C1>Sheet</font></A></br>
+<A HREF="https://docs.google.com/spreadsheets/d/10dq2pvtCEpNw44iPqqYLTyvLettJ1lK8GsQsgio02e4/edit?usp=sharing" target="_blank text-decoration:none;"><font color=#FF171A>Da</font><font color=#FF5C00>ta</font><font color=#00FF00>-</font><font color=#C1C1C1>Sheet</font></A></br>
 
 </font>
 <font style="font-family:times;font-size:64px;">
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="biome.html"style="text-decoration:none;"><font color=#E6E6E6>bio</font><font color=#616161>me</font></A>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="biome.png"style="text-decoration:none;"><font color=#E6E6E6>bio</font><font color=#616161>me</font></A>
 </br>
