--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </font>
 &nbsp;&nbsp;<A HREF="map.png"style="text-decoration:none;"><font color=#1C7FFF>m</font><font color=#2824B1>ap</font><font color="WHITE">s</font></A></br>
 &nbsp;&nbsp;
-<A HREF="https://docs.google.com/spreadsheets/d/10dq2pvtCEpNw44iPqqYLTyvLettJ1lK8GsQsgio02e4/edit?usp=sharing" style="text-decoration:none;"><font color=#FF171A>da</font><font color=#FF5C00>ta</font><font color=#00FF00>-</font><font color=#C1C1C1>Sheet</font></A></br>
+<A HREF="https://docs.google.com/spreadsheets/d/10dq2pvtCEpNw44iPqqYLTyvLettJ1lK8GsQsgio02e4/edit?usp=sharing" style="text-decoration:none;"><font color=#FF171A>da</font><font color=#FF5C00>ta</font><font color=#00FF00>she</font><font color=#C1C1C1>et</font></A></br>
 
 </font>
 <font style="font-family:times;font-size:64px;">
