--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<body bgcolor=black>
+<body bgcolor=darkgreen>
 <font style="font-family:times;font-size:64px;">
 <body style="word-wrap: initial;">
 
